# polly-pony

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  deploy.sh  main.py  pyproject.toml  run-databricks-bundles.sh
bundle/: targets.yml  variables.yml
bundle_a/: databricks.yml  main.py  pyproject.toml
bundle_a/resources/: job_a.yml
bundle_a/src/: main.py
bundle_a/src/bundle_a/: __init__.py  plot.py
bundle_b/: databricks.yml  main.py  pyproject.toml
bundle_b/resources/: pipeline_b.yml
bundle_b/src/: bronze.sql  gold.sql  silver.py
bundle_b/src/bundle_b/: __init__.py  featurize.py
bundle_c/: databricks.yml  main.py  pyproject.toml
src/polly_pony_utils/: __init__.py  logging.py  utils.py
