[project]
name = "polly-pony-utils"
version = "0.1.0"
description = "Shared utilities for polly-pony bundles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/polly_pony_utils"]
