[project]
name = "polly-pony-utils"
version = "0.1.0"
description = "Shared utilities for polly-pony bundles"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/polly_pony_utils"]

[tool.uv]
exclude-newer = "7 days"

[dependency-groups]
dev = [
    "pre-commit>=3,<5",
    "ruff>=0.15.7",
]
