[project]
name = "bundle-a"
version = "0.1.0"
description = "Seaborn visualization job"
requires-python = "==3.12.3"
dependencies = ["seaborn>=0.13.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/bundle_a"]

[tool.hatch.build.targets.wheel]
packages = ["src/bundle_a"]

[tool.uv]
exclude-newer = "7 days"

[tool.uv.sources]
polly-pony-utils = { path = "..", editable = true }
