[project]
name = "bundle-b"
version = "2024.06.0"
description = "SDP pipeline with medallion architecture"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/bundle_b"]

[tool.hatch.build.targets.wheel]
packages = ["src/bundle_b"]
