[project]
name = "bundle-b"
version = "0.1.0"
description = "SDP pipeline with medallion architecture"
requires-python = "==3.12.3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/bundle_b"]

[tool.hatch.build.targets.wheel]
packages = ["src/bundle_b"]

[tool.uv.sources]
polly-pony-utils = { path = "..", editable = true }
